# render-server

./: .gitignore  CMakeLists.txt  readme.md  setup.py
proto/: render_server.grpc.pb.cc  render_server.grpc.pb.h  render_server.pb.cc  render_server.pb.h
sapien_render_server/: __init__.py
src/: client_system.h  pybind.cpp
